--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "dependencies": {
     "expo": "~37.0.3",
+    "nanoid": "^3.1.10",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-web": "~0.11.7",
-    "uuidv4": "^6.1.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
