--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "expo": "~37.0.3",
     "nanoid": "^3.1.10",
     "react": "~16.9.0",
